Add POST user squad and DELETE user squad
